2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* license

2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* truncate long proof commands

2011-04-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix undo for unaffected proofs

2011-04-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* states and proper undo
	* proper proof finish

2011-04-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* mouse button 1
	* current/selected node drawing
	* use of sequent window

2011-04-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* parsing input, first version of communication protocol
	* reposition to current node
	* colors

