@@ -1,0 +1,26 @@
+(* 
+ * prooftree --- proof tree display for Proof General
+ * 
+ * Copyright (C) 2011 Hendrik Tews
+ * 
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
+ * the License, or (at your option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License in file COPYING in this or one of the
+ * parent directories for more details.
+ * 
+ * $Id: version.mli,v 1.1 2011/04/13 10:47:09 tews Exp $
+ *)
+
+
+(** Version number. The implementation of this module is generated 
+    automatically from version.txt *)
+
+
+(** version number *)
+val version : string
