@@ -1,5 +1,10 @@
 2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* privatized non-public methods
+	* some module interface restrictions
+
+2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* license
 
 2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>
